Improve code of AbstractSignManagement